
public abstract class Queso extends Extra {
    public Queso(String nombre) {
        super(nombre);
    }
}
