package src;

public class Huevo extends Extra {
    public Huevo() {
        super("Huevo frito");
    }

    @Override
    public void mostrar() {
        System.out.println(" ----(  )----");
    }
}