package src;
public class Integral extends Pan {
    public Integral() {
        super("Integral");
    }

    @Override
    public void mostrar() {
        System.out.println("|".repeat(14));
    }
}