package src;

public class QuesoCheddar extends Queso {
    public QuesoCheddar() {
        super("Queso Cheddar");
    }

    @Override
    public void mostrar() {
        System.out.println(" " + "=".repeat(12));
    }
}