@startuml

abstract class Extra {
    -String nombre
    +Extra(String nombre)
    +String ver()
    +void mostrar()
    +String describir()
}

abstract class Queso extends Extra {
    +Queso(String nombre)
}

class QuesoCheddar extends Queso {
    +QuesoCheddar()
    +void mostrar()
}

class QuesoAzul extends Queso {
    +QuesoAzul()
    +void mostrar()
}

class Salsa extends Extra {
    -String cantidad
    +Salsa(String nombre, String cantidad)
    +String ver()
    +void mostrar()
    +String describir()
}

class Mayonesa extends Salsa {
    +Mayonesa(String cantidad)
    +void mostrar()
}

class Ketchup extends Salsa {
    +Ketchup(String cantidad)
    +void mostrar()
}

class Huevo extends Extra {
    +Huevo()
    +void mostrar()
}

abstract class Carne {
    -String nombre
    -String coccion
    +Carne(String nombre, String coccion)
    +String ver()
    +void mostrar()
    +String describir()
}

class Res extends Carne {
    +Res(String coccion)
    +void mostrar()
}

class Pollo extends Carne {
    +Pollo(String coccion)
    +void mostrar()
}

abstract class Pan {
    -String nombre
    +Pan(String nombre)
    +String ver()
    +void mostrar()
    +String describir()
}

class Brioche extends Pan {
    +Brioche()
    +void mostrar()
}

class Integral extends Pan {
    +Integral()
    +void mostrar()
}

class Hamburguesa {
    -Pan[] panes
    -Carne carne
    -Extra[] extras
    -int extrasAgregados
    +Hamburguesa(Pan panSuperior, Pan panInferior, Carne carne, int numeroExtras)
    +void agregarExtra(Extra extra)
    +void mostrar()
    +void describir()
}

class Cocinero {
    +void prepararHamburguesa()
    +static void main(String[] args)
}

Cocinero --> Pan
Cocinero --> Carne
Cocinero --> Extra
Cocinero -l-> Hamburguesa
Hamburguesa *-- Pan
Hamburguesa *-- Carne
Hamburguesa *-- Extra

@enduml
